@@ -6,6 +6,10 @@ Post-v3.3.0
      * Added new option [-f|--format] to choose the output format, e.g. 'json'
        or 'text' (by default).
      * Added new option [--pretty] to print JSON output in a readable fashion.
+     * 'list-commands' now supports output in JSON format.
+   - Python:
+     * Added support for different output formats like 'json' to appctl.py and
+       Python's unixctl classes.
    - Userspace datapath:
      * Conntrack now supports 'random' flag for selecting ports in a range
        while natting and 'persistent' flag for selection of the IP address
